# f2sz

./: .gitignore  CMakeLists.txt
src/: f2sz-get-fasta.cpp  f2sz.c  f2sz.cpp  index.cpp  index.h  seekable.cpp  seekable.h  utils.c  utils.h
